Bug 205374 - Adding a slide layout adds multiple undo commands
Summary: Adding a slide layout adds multiple undo commands
Status: RESOLVED FIXED
Alias: None
Product: calligrastage
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Thomas Zander
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-27 18:34 UTC by Sven Langkamp
Modified: 2011-01-30 07:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sven Langkamp 2009-08-27 18:34:54 UTC
Version:           2.1 Beta 1 (using 4.2.1 (KDE 4.2.1) "release 103", KDE:KDE4:Factory:Desktop / openSUSE_11.0)
Compiler:          gcc
OS:                Linux (i686) release 2.6.25.20-0.5-pae

To reproduce:
-add slide layout
-undo

Result: Only on of the frame is removed. I would expect all of the to be removed.
Comment 1 Thomas Zander 2009-09-01 13:51:12 UTC
SVN commit 1018169 by zander:

Move inserting text to the text shape.

CCBUG:205374

Provide a new property in the properties based 'createShape()' method called
'text' which will result in the argument QString to be inserted as
text into the initial shape.

Note that this will avoid any undo stack or similar.

 M  +4 -6      kpresenter/part/KPrPlaceholderTextStrategy.cpp  
 M  +10 -3     plugins/textshape/TextShapeFactory.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1018169
Comment 2 Thomas Zander 2009-09-01 13:51:19 UTC
SVN commit 1018170 by zander:

Group the actions into one undo action.

BUG:205374

 M  +2 -0      KPrPlaceholders.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1018170
Comment 3 T Zachmann 2009-09-01 21:23:37 UTC
The bug still happens at the first layout that is added to a document.
Comment 4 T Zachmann 2011-01-30 07:28:04 UTC
Git commit 4fb752e3eaf9f695cba28c0b2b7e46f14eaec8bb by Thorsten Zachmann.
Pushed by zachmann into branch 'master'.

Fix Adding a slide layout adds multiple commands

One problem that still existed was that when a view was closed and a new document
opened then muliple commands where inserted when a layout was selected.

Disconnect before connecting again.

BUG: 205374

M  +4    -0    kpresenter/part/dockers/KPrPageLayoutDocker.cpp     

http://commits.kde.org/47e7010d/4fb752e3eaf9f695cba28c0b2b7e46f14eaec8bb