Group the actions into one undo action.

BUG:205374

svn path=/trunk/koffice/; revision=1018170